# frarber

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
frarber/: arbitrage.py  calculate.py  config.py  constants.py  equity_alert.py  exchange.py  main.py  price_diff.py
frarber/enums/: action.py  exchange_type.py  threshold_direction.py
frarber/exchanges/: __init__.py  binance.py  bitget.py  bybit.py  mexc.py  phemex.py
frarber/utils/: symbol.py
